fix: change height so there is not extra space

--- a/blocks/elements/elements.css
+++ b/blocks/elements/elements.css
@@ -15,6 +15,6 @@
 @media screen and (max-width: 320px) {
   .elements {
     width: 282px;
-    min-height: 2268px;
+    max-height: 2268px;
   }
 }
